k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intendance
  namespace: intendance
spec:
  selector:
    app: intendance
  ports:
    - name: http
      port: 80
      targetPort: http
